--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -19,7 +19,8 @@
                     <li class="nav-item"><a href="/admin/create_account" class="nav-link">Tạo tài khoản</a></li>
                     <li class="nav-item"><a href="/admin/control_account_doctor" class="nav-link">Quản lý bác sĩ</a></li>
                     <li class="nav-item"><a href="/admin/control_account_nurse" class="nav-link">Quản lý y tá</a></li>
-                    <li class="nav-item"><a href="#settings" class="nav-link">Cài Đặt</a></li>
+                    <li class="nav-item"><a href="/admin/control_medicine" class="nav-link">Quản lý thuốc</a></li>
+                    <li class="nav-item"><a href="/admin/control_onleave" class="nav-link">Đơn xin nghỉ</a></li>
                     <li class="nav-item"><a href="/admin/logout" class="nav-link">Đăng Xuất</a></li>
                 </ul>
             </nav>
@@ -45,18 +46,19 @@
                         <p>Quản lý y tá</p>
                     </div>
                 </a>
-                <a href="#contact" class="text-decoration-none">
+                <a href="/admin/control_medicine" class="text-decoration-none">
                     <div class="card bg-white shadow-sm p-3">
-                        <div class="icon">📞</div>
-                        <p>Liên Hệ</p>
+                        <div class="icon">💊</div>
+                        <p>Quản lý thuốc</p>
                     </div>
                 </a>
-                <a href="#settings" class="text-decoration-none">
+                <a href="/admin/control_onleave" class="text-decoration-none">
                     <div class="card bg-white shadow-sm p-3">
-                        <div class="icon">⚙️</div>
-                        <p>Cài Đặt</p>
+                        <div class="icon">✍️</div>
+                        <p>Đơn xin nghỉ</p>
                     </div>
                 </a>
+                
             </div>
         </main>
 
