--- a/src/main/resources/templates/admin/createAccount.html
+++ b/src/main/resources/templates/admin/createAccount.html
@@ -14,16 +14,17 @@
 <body>
 	<div class="container-fluid">
 		<div class="row">
-			<!-- Thanh điều hướng Sidebar -->
+			<!-- Sidebar Navigation -->
 			<nav class="col-md-3 col-lg-2 d-md-block sidebar">
 				<a href="/admin/admin_home" class="logo">🏨</a>
 				<ul class="nav flex-column">
-					<li class="nav-item"><a href="/admin/admin_home" class="nav-link">Trang Chủ</a></li>
-					<li class="nav-item"><a href="#about" class="nav-link">Giới Thiệu</a></li>
-					<li class="nav-item"><a href="#services" class="nav-link">Dịch Vụ</a></li>
-					<li class="nav-item"><a href="#contact" class="nav-link">Liên Hệ</a></li>
-					<li class="nav-item"><a href="#settings" class="nav-link">Cài Đặt</a></li>
-				</ul>
+                    <li class="nav-item"><a href="/admin/admin_home" class="nav-link">Trang Chủ</a></li>
+                    <li class="nav-item"><a href="/admin/create_account" class="nav-link">Tạo tài khoản</a></li>
+                    <li class="nav-item"><a href="/admin/control_account_doctor" class="nav-link">Quản lý bác sĩ</a></li>
+                    <li class="nav-item"><a href="/admin/control_account_nurse" class="nav-link">Quản lý y tá</a></li>
+                    <li class="nav-item"><a href="/admin/control_medicine" class="nav-link">Quản lý thuốc</a></li>
+                    <li class="nav-item"><a href="/admin/logout" class="nav-link">Đăng Xuất</a></li>
+                </ul>
 			</nav>
 
 			<!-- Khu vực nội dung chính -->
