--- a/src/main/resources/templates/admin/controlAccountDoctor.html
+++ b/src/main/resources/templates/admin/controlAccountDoctor.html
@@ -22,18 +22,17 @@
 			<nav class="col-md-3 col-lg-2 d-md-block sidebar">
 				<a href="/admin/admin_home" class="logo">🏨</a>
 				<ul class="nav flex-column">
-					<li class="nav-item"><a href="/admin/admin_home" class="nav-link">Trang Chủ</a></li>
-					<li class="nav-item"><a href="/admin/create_account_doctor" class="nav-link">Tạo tài khoản</a></li>
-					<li class="nav-item"><a href="/admin/control_account_doctor" class="nav-link">Quản lý tài khoản</a>
-					</li>
-					<li class="nav-item"><a href="#contact" class="nav-link">Liên Hệ</a></li>
-					<li class="nav-item"><a href="#settings" class="nav-link">Cài Đặt</a></li>
-					<li class="nav-item"><a href="/admin/logout" class="nav-link">Đăng Xuất</a></li>
-				</ul>
+                    <li class="nav-item"><a href="/admin/admin_home" class="nav-link">Trang Chủ</a></li>
+                    <li class="nav-item"><a href="/admin/create_account" class="nav-link">Tạo tài khoản</a></li>
+                    <li class="nav-item"><a href="/admin/control_account_doctor" class="nav-link">Quản lý bác sĩ</a></li>
+                    <li class="nav-item"><a href="/admin/control_account_nurse" class="nav-link">Quản lý y tá</a></li>
+                    <li class="nav-item"><a href="/admin/control_medicine" class="nav-link">Quản lý thuốc</a></li>
+                    <li class="nav-item"><a href="/admin/logout" class="nav-link">Đăng Xuất</a></li>
+                </ul>
 			</nav>
 			<!-- Main Content Area -->
 			<div class="main-content col-md-9 col-lg-10">
-				<h2>Quản Lý Tài Khoản Người Dùng</h2>
+				<h2>Quản Lý Tài Khoản Bác Sĩ</h2>
 
 				<form method="get" action="/admin/search_account_doctor" class="search-form" th:object="${searchDto}">
 					<div class="form-row">
@@ -101,7 +100,6 @@
 						<!-- Delete Icon -->
 						<i class="bi bi-x-circle delete-icon"
 							th:attr="onclick='event.stopPropagation(); confirmDelete(\'' + ${doctor.idPerson} + '\')'"></i>
-
 					</div>
 				</div>
 
