--- a/src/main/resources/templates/admin/showNuserInformation.html
+++ b/src/main/resources/templates/admin/showNuserInformation.html
@@ -46,15 +46,17 @@
 <body>
 	<div class="container-fluid">
 		<div class="row">
+			<!-- Sidebar Navigation -->
 			<nav class="col-md-3 col-lg-2 d-md-block sidebar">
 				<a href="/admin/admin_home" class="logo">🏨</a>
 				<ul class="nav flex-column">
-					<li class="nav-item"><a href="/admin/admin_home" class="nav-link">Trang Chủ</a></li>
-					<li class="nav-item"><a href="#about" class="nav-link">Giới Thiệu</a></li>
-					<li class="nav-item"><a href="#services" class="nav-link">Dịch Vụ</a></li>
-					<li class="nav-item"><a href="#contact" class="nav-link">Liên Hệ</a></li>
-					<li class="nav-item"><a href="#settings" class="nav-link">Cài Đặt</a></li>
-				</ul>
+                    <li class="nav-item"><a href="/admin/admin_home" class="nav-link">Trang Chủ</a></li>
+                    <li class="nav-item"><a href="/admin/create_account" class="nav-link">Tạo tài khoản</a></li>
+                    <li class="nav-item"><a href="/admin/control_account_doctor" class="nav-link">Quản lý bác sĩ</a></li>
+                    <li class="nav-item"><a href="/admin/control_account_nurse" class="nav-link">Quản lý y tá</a></li>
+                    <li class="nav-item"><a href="/admin/control_medicine" class="nav-link">Quản lý thuốc</a></li>
+                    <li class="nav-item"><a href="/admin/logout" class="nav-link">Đăng Xuất</a></li>
+                </ul>
 			</nav>
 
 			<main class="col-md-9 col-lg-10 main-content position-relative"> <!-- Thêm class position-relative -->
@@ -84,8 +86,7 @@
 						<div class="mb-3">
 							<label class="form-label">Trạng thái hoạt động</label>
 							<div class="form-check">
-								<input class="form-check-input" type="checkbox" th:field="*{quit}"
-									onchange="toggleOverlay(this)">
+								<input class="form-check-input" type="checkbox" th:field="*{quit}">
 								<label class="form-check-label" for="status">Ngưng hoạt động</label>
 							</div>
 						</div>
