--- a/src/main/resources/templates/doctor/doctorprofile.html
+++ b/src/main/resources/templates/doctor/doctorprofile.html
@@ -47,16 +47,17 @@
 	<div class="container-fluid">
 		<div class="row">
 			<!-- Sidebar Navigation -->
-			<nav class="col-md-3 col-lg-2 d-md-block sidebar">
-				<a href="/doctor/doctor_home" class="logo">🏨</a>
-				<ul class="nav flex-column">
-					<li class="nav-item"><a href="/doctor/doctor_home" class="nav-link">Trang Chủ</a></li>
-					<li class="nav-item"><a href="/doctor/profile" class="nav-link">Hồ sơ</a></li>
-					<li class="nav-item"><a href="/doctor/control_account_doctor" class="nav-link">Công việc</a></li>
-					<li class="nav-item"><a href="/doctor/control_account_nurse" class="nav-link">Xin nghỉ</a></li>
-					<li class="nav-item"><a href="/doctor/logout" class="nav-link">Đăng Xuất</a></li>
-				</ul>
-			</nav>
+            <nav class="col-md-3 col-lg-2 d-md-block sidebar">
+                <a href="/doctor/doctor_home" class="logo">🏨</a>
+                <ul class="nav flex-column">
+                    <li class="nav-item"><a href="/doctor/doctor_home" class="nav-link">Trang Chủ</a></li>
+                    <li class="nav-item"><a href="/doctor/profile" class="nav-link">Hồ sơ</a></li>
+                    <li class="nav-item"><a href="/doctor/control_patient" class="nav-link">Công việc</a></li>
+                    <li class="nav-item"><a href="/doctor/on_leave" class="nav-link">Xin nghỉ</a></li>
+                    <li class="nav-item"><a href="/doctor/control_onleave" class="nav-link">Đơn xin nghỉ</a></li>
+                    <li class="nav-item"><a href="/doctor/logout" class="nav-link">Đăng Xuất</a></li>
+                </ul>
+            </nav>
 
 			<main class="col-md-9 col-lg-10 main-content position-relative"> <!-- Thêm class position-relative -->
 				<div class="overlay"></div> <!-- Thêm overlay -->
