--- a/src/main/resources/templates/doctor/showOnLeaveInformation.html
+++ b/src/main/resources/templates/doctor/showOnLeaveInformation.html
@@ -33,34 +33,50 @@
 			<!-- Main Content Area -->
 			<main class="col-md-9 col-lg-10 main-content">
 				<h2 class="mt-4">Form Xin Nghỉ Phép</h2>
-				<form action="/doctor/on_leave" method="POST" class="mt-3" th:object="${onLeaveDto}">
+				<form action="/doctor/onleave_confirm" method="POST" class="mt-3" th:object="${onLeaveDto}">
 					<div th:if="${error != null}" class="alert alert-danger" role="alert">
 						<p th:text="${error}"></p>
 					</div>
 					<div th:if="${success != null}" class="alert alert-success" role="alert">
 						<p th:text="${success}"></p>
 					</div>
-
-					<input type="text" class="form-control" th:field="*{idPerson}" hidden>
+					<input class="form-check-input" type="text" th:field="*{id}" hidden>
+					<div class="mb-3">
+						<div class="form-check">
+							<input class="form-check-input" type="checkbox" th:field="*{confirm}" disabled>
+							<label class="form-check-label" for="status">Xác nhận</label>
+						</div>
+					</div>
+					<div class="mb-3">
+						<label for="startDate" class="form-label">ID Person</label>
+						<input type="text" class="form-control" th:field="*{idPerson}" readonly>
+						<p th:if="${#fields.hasErrors('idPerson')}" th:errorclass="text-danger" th:errors="*{idPerson}">
+						</p>
+					</div>
+					<div class="mb-3">
+						<label for="startDate" class="form-label">Ngày tạo đơn xin nghỉ</label>
+						<input type="text" class="form-control" th:field="*{date}" readonly>
+						<p th:if="${#fields.hasErrors('date')}" th:errorclass="text-danger" th:errors="*{date}">
+						</p>
+					</div>
 					<div class="mb-3">
 						<label for="startDate" class="form-label">Ngày Bắt Đầu</label>
-						<input type="date" class="form-control" th:field="*{startDate}">
+						<input type="text" class="form-control" th:field="*{startDate}" readonly>
 						<p th:if="${#fields.hasErrors('startDate')}" th:errorclass="text-danger"
 							th:errors="*{startDate}"></p>
 					</div>
 					<div class="mb-3">
 						<label for="endDate" class="form-label">Ngày Kết Thúc</label>
-						<input type="date" class="form-control" th:field="*{endDate}">
+						<input type="text" class="form-control" th:field="*{endDate}" readonly>
 						<p th:if="${#fields.hasErrors('endDate')}" th:errorclass="text-danger" th:errors="*{endDate}">
 						</p>
 					</div>
 					<div class="mb-3">
 						<label for="endDate" class="form-label">Lý do</label>
 						<textarea class="form-control" rows="5" style="height: 200px; resize: vertical; width: 100%;"
-							th:field="*{reason}"></textarea>
+							th:field="*{reason}" readonly></textarea>
 						<p th:if="${#fields.hasErrors('reason')}" th:errorclass="text-danger" th:errors="*{reason}"></p>
 					</div>
-					<button type="submit" class="btn btn-primary">Gửi Yêu Cầu</button>
 				</form>
 			</main>
 		</div>
