--- a/src/main/resources/templates/nuser/doctorOnLeave.html
+++ b/src/main/resources/templates/nuser/doctorOnLeave.html
@@ -19,21 +19,21 @@
 		<div class="row">
 			<!-- Sidebar Navigation -->
             <nav class="col-md-3 col-lg-2 d-md-block sidebar">
-                <a href="/doctor/doctor_home" class="logo">🏨</a>
+                <a href="/nuser/nuser_home" class="logo">🏨</a>
                 <ul class="nav flex-column">
-                    <li class="nav-item"><a href="/doctor/doctor_home" class="nav-link">Trang Chủ</a></li>
-                    <li class="nav-item"><a href="/doctor/profile" class="nav-link">Hồ sơ</a></li>
-                    <li class="nav-item"><a href="/doctor/control_patient" class="nav-link">Công việc</a></li>
-                    <li class="nav-item"><a href="/doctor/on_leave" class="nav-link">Xin nghỉ</a></li>
-                    <li class="nav-item"><a href="/doctor/control_onleave" class="nav-link">Đơn xin nghỉ</a></li>
-                    <li class="nav-item"><a href="/doctor/logout" class="nav-link">Đăng Xuất</a></li>
+                    <li class="nav-item"><a href="/nuser/nuser_home" class="nav-link">Trang Chủ</a></li>
+                    <li class="nav-item"><a href="/nuser/profile" class="nav-link">Hồ sơ</a></li>
+                    <li class="nav-item"><a href="/nuser/control_patient" class="nav-link">Công việc</a></li>
+                    <li class="nav-item"><a href="/nuser/on_leave" class="nav-link">xin nghỉ</a></li>
+                    <li class="nav-item"><a href="/nuser/control_onleave" class="nav-link">Đơn xin nghỉ</a></li>
+                    <li class="nav-item"><a href="/nuser/logout" class="nav-link">Đăng Xuất</a></li>
                 </ul>
             </nav>
 
 			<!-- Main Content Area -->
 			<main class="col-md-9 col-lg-10 main-content">
 				<h2 class="mt-4">Form Xin Nghỉ Phép</h2>
-				<form action="/doctor/on_leave" method="POST" class="mt-3" th:object="${onLeaveDto}">
+				<form action="/nuser/on_leave" method="POST" class="mt-3" th:object="${onLeaveDto}">
 					<div th:if="${error != null}" class="alert alert-danger" role="alert">
 						<p th:text="${error}"></p>
 					</div>
